# twitch-follows-gui

./: .gitignore  Cargo.toml  README.md  tauri.conf.json
.github/workflows/: release.yml
capabilities/: default.json
frontend/: app.js  index.html  style.css
src/: api.rs  main.rs  models.rs
