[package]
name = "twitch-follows-gui"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
reqwest = { version = "0.13.3", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.1", features = ["full"] }
anyhow = "1"
open = "5"
